# zombie-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
django_server/: settings.py  urls.py
resources/: exceptions.py  forms.py  models.py  urls.py  views.py
resources/interface/: __init__.py
resources/interface/crud/: read_inventory.py  read_survivors.py  update_intentory.py
resources/interface/service/: trade_service.py
resources/migrations/: 0001_initial.py  0002_seed_default_items.py
resources/tests/: conftest.py  test_forms.py  test_trade_service.py
survivors/: models.py  tests.py  urls.py  views.py
survivors/migrations/: 0001_initial.py
